Fix PageHeader align issue, close #1693

--- a/src/components/PageHeader/index.less
+++ b/src/components/PageHeader/index.less
@@ -63,18 +63,20 @@
   }
 
   .title,
+  .content {
+    flex: auto;
+  }
+
   .action,
-  .content,
   .extraContent,
   .main {
     flex: 0 1 auto;
   }
-  .content {
-    flex: auto;
-  }
+
   .main {
     width: 100%;
   }
+
   .title,
   .action {
     margin-bottom: 16px;
